--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "hubot-google-translate",
   "description": "Allows Hubot to know many languages using Google Translate",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "author": "Josh Nichols <technicalpickles@github.com>",
   "license": "MIT",
-  "keywords": "hubot, hubot-scripts, translate, translation, google translate",
+  "keywords": [
+    "hubot",
+    "hubot-scripts",
+    "translate",
+    "translation",
+    "google translate"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/hubot-scripts/hubot-google-translate.git"
@@ -17,15 +23,11 @@
     "hubot": ">=2 <10 || 0.0.0-development"
   },
   "devDependencies": {
-    "hubot": "2.x",
-    "mocha": "*",
-    "chai": "*",
-    "sinon-chai": "*",
-    "sinon": "*",
-    "grunt-mocha-test": "~0.7.0",
-    "grunt-release": "~0.6.0",
-    "matchdep": "~0.1.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "chai": "^4.2.0",
+    "hubot": "^3.3.2",
+    "mocha": "^6.2.2",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0"
   },
   "main": "index.coffee",
   "scripts": {
