--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0"
   },
-  "main": "index.coffee",
+  "main": "index.js",
   "scripts": {
     "test": "grunt test"
   }
